--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "pug": "2.0.0-beta11",
+    "resemblejs": "^3.2.5",
     "webdriverio": "^6.5.2"
   },
   "devDependencies": {
