--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "faker": "^5.1.0",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "pug": "2.0.0-beta11",
     "resemblejs": "^3.2.5",
