--- a/frontend/interface/package.json
+++ b/frontend/interface/package.json
@@ -22,7 +22,7 @@
     "typescript": "^3.8"
   },
   "scripts": {
-    "start": "set PORT=8000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
