--- a/frontend/interface/package.json
+++ b/frontend/interface/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.1.0",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
